syntax = "proto3";

package job;

option go_package = "./";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message JobReq{
    int64 employer_id = 1;
    string title = 2;
    string employmenttype = 3;
    string description = 4;
    string location = 5;
    float salary = 6;
    string experiencelevel = 7;
}

message JobRes {
    int64 id = 1;
    int64 employer_id = 2;
    string title = 3;
    string employmenttype = 4;
    string description = 5;
    string location = 6;
    float salary = 7;
    string experiencelevel = 8;
    google.protobuf.Timestamp postedat = 9;
}

message GetJobReq {
    int64 id = 1;
}

message ListJobRes {
    repeated JobRes jobs = 1;
}

message UpdateJobReq {
    int64 id = 1;
    JobReq job = 2;
}

message ApplyJobReq {
    int64 jobid = 2;
    int64 jobseekerid = 3;
    bytes resumedata = 4;
    string resume = 5;
}

message ApplyJobRes {
    int64 id = 1;
    int64 jobid = 2;
    int64 jobseekerid = 3;
    string resume = 4;
    string status = 5;
    google.protobuf.Timestamp appliedat = 6;
}

message ListApplyJob {
    repeated ApplyJobRes applyjobs = 1;
}

message UpdateAppReq {
    int64 jobid = 1;
    int64 jobseekerid = 2;
    string status = 3;
}

message GetApplicantReq {
    int64 jobid = 1;
    string status = 3;
}

service Job {
    rpc CreateJob(JobReq) returns (JobRes) {}
    rpc GetJob(GetJobReq) returns (JobRes) {}
    rpc ListJobs(google.protobuf.Empty) returns (ListJobRes) {}
    rpc UpdateJob(UpdateJobReq) returns (JobRes) {}


    rpc ApplyJob(ApplyJobReq) returns (ApplyJobRes) {}
    rpc ListApplyJobByID(GetJobReq) returns (ListApplyJob) {}
    rpc UpdateApplicants(UpdateAppReq) returns (ApplyJobRes) {}
    rpc Getapplicantsbystatus(GetApplicantReq) returns (ListApplyJob) {}
}